# cloudops-warroom-agent

./: .gitignore  Dockerfile  README.md  evaluation_raw_data.csv  heuristic_agent.py  inference.py  nohup.out  openenv.yaml  performance_eval.py  pyproject.toml  server_log.txt
cloudops_env/: README.md  __init__.py  client.py  env.py  models.py  pyproject.toml  requirements.txt
cloudops_env/graders/: __init__.py  reward.py
cloudops_env/server/: app.py
cloudops_env/tasks/: __init__.py  easy.py  hard.py  medium.py  registry.py
graders/: bad_deploy.py  cascade_failure.py  noisy_alert.py
server/: app.py
server/server/: app.py
