[project]
name = "cloudops-warroom-agent"
version = "0.1.0"
description = "Autonomous SRE agent for CloudOps WarRoom"
authors = [{ name = "Amartya Majumder" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "inference:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.openenv]
entrypoint = "inference.py"